# investing

./: .gitignore  AGENTS.md  README.md  advanced_pipeline_dashboard.py  app.py  benchmark_prices.csv  lightgbm_stock_model.pkl  lightgbm_stock_model_settings.json  live_predictions.csv  notes_for_after  requirements.txt  stock_prices.csv  tmp_debug_transformer_save.py  tmp_debug_transformer_wrapper.py
automated_forecasting_engine/: AGENTS_OVERVIEW.md  README.md  pyproject.toml  requirements.txt
automated_forecasting_engine/configs/: alpaca_llm_options_shadow_nvda.json  alpaca_llm_shadow_btc_usdc.json  alpaca_llm_shadow_eth.json  deribit_llm_shadow_eth_exploratory.json  deribit_llm_shadow_eth_exploratory_lm_studio.json
automated_forecasting_engine/examples/: run_synthetic.py
automated_forecasting_engine/scripts/: LLM_OPTIONS_TRADER_SCRIPTS.md  archive_agent_runs.py  com.marketforecasting.watchagent.plist.example  deribit_stop_sell_and_clear.sh  emergency_close_alpaca_paper_options.sh  experiment_caveman_openai_token_savings.py  install_watch_agent_launchd.sh  keep_awake.sh  load_llm_studio_remote_model.sh  monitor_deribit_order_protection.py  print_active_trader_summaries.py  run_daily_target_paper_options.sh  run_deribit_eth_usdc_daily_agent.sh  run_deribit_eth_usdc_streamlit_dashboard.sh  run_deribit_live_strategy_testnet.sh  run_deribit_scalping_testnet.sh  run_iwm_live_breakout_monitor.sh  run_llm_options_trader_dashboard.sh  run_llm_options_trader_live_shadow.sh  run_llm_options_trader_live_shadow_hf.sh  run_llm_options_trader_testnet.sh  run_spy_tlt_live_breakout_monitors.sh  run_watch_agent_once.sh  schedule_live_advice_order_agent_tomorrow.sh  stop_daily_target_paper_options.sh  stop_deribit_eth_usdc_daily_agent.sh  stop_deribit_scalping_testnet.sh  stop_llm_options_trader_live_shadow.sh  stop_llm_options_trader_live_shadow_hf.sh  stop_llm_options_trader_testnet.sh  update_portfolio_projection.sh
automated_forecasting_engine/src/: sitecustomize.py
automated_forecasting_engine/tests/: test_alpaca_breakout_monitor.py  test_alpaca_broker.py  test_alpaca_llm_shadow.py  test_alpaca_options_trader.py  test_chapter_13_portfolio_brain.py  test_cli_datetime.py  test_curve_shape.py  test_daily_trade.py  test_data_and_features.py  test_deribit_broker.py  test_deribit_eth_usdc_daily_agent.py  test_deribit_live_report.py  test_deribit_live_spot_agent.py  test_deribit_options_dashboard.py  test_deribit_options_feedback.py  test_deribit_options_trader.py  test_eodhd_fundamentals.py  test_fmp_fundamentals.py  test_ibkr_manual_buy_agent.py  test_live_advice_order_agent.py  test_live_trading_report.py  test_llm_handler.py  test_llm_options_agent_controls.py  test_llm_options_prompts.py  test_llm_options_strategy_memory.py  test_llm_trader.py  test_llm_usage.py  test_long_term_sources.py  test_massive_fundamentals.py  test_nasdaq_data_link_fundamentals.py  test_option_ticker_selector.py  test_options_decision.py  test_paper_options_agent.py  test_paper_options_dashboard.py  test_paper_trader_agent.py  test_paper_trader_dashboard.py  test_pure_llm_stock_forecaster.py  test_pure_llm_virtual_trader_agent.py  test_risk_profiles.py  test_shadow_execution.py  (+18 more)
automated_forecasting_engine/trade_republic_exports/: account_transactions.csv  all_events.json  allinvestview_holdings.csv  investment_report.json  investment_report_alpaca.json  investment_report_latest.json  isin_map.csv  portfolio.csv  (+3 more)
(+447 files in other folders)
