[project]
name = "market-forecasting-engine"
version = "0.1.0"
description = "Governable automated stock price forecasting engine prototype."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "matplotlib>=3.8",
  "plotly>=6.0",
  "pyarrow>=16.0",
  "pdfplumber>=0.11",
  "statsmodels>=0.14,<1.0",
  "arch>=7.0,<9.0",
  "PyWavelets>=1.8,<2.0",
  "yfinance>=0.2",
  "xgboost>=3.2,<4.0",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.5"]
optimization = ["optuna>=3.6,<5.0"]
deep-learning = ["torch>=2.2,<3.0"]
llm = ["openai>=1.0,<2.0", "aws-bedrock-token-generator>=1.1,<2.0"]
bayesian = ["pymc>=5,<6"]
traderepublic = [
  "pytr @ git+https://github.com/pytr-org/pytr.git",
]
traderepublic-legacy = [
  "TradeRepublicApi @ git+https://github.com/Zarathustra2/TradeRepublicApi.git",
  "deprecated>=1.2",
  "ecdsa>=0.19",
  "requests>=2.32",
  "websockets>=15",
]

[project.scripts]
market-forecast = "market_forecasting_engine.cli:main"
market-daily-trade = "market_forecasting_engine.daily_trade_cli:main"
market-traderepublic-test = "market_forecasting_engine.trade_republic_test_cli:main"
market-traderepublic-readonly = "market_forecasting_engine.trade_republic_readonly_cli:main"
market-traderepublic-report = "market_forecasting_engine.trade_republic_report:main"
market-traderepublic-report-loop = "market_forecasting_engine.trade_republic_report_loop:main"
market-traderepublic-dashboard = "market_forecasting_engine.trade_republic_dashboard:main"
market-portfolio-brain = "market_forecasting_engine.portfolio_brain:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
